# example-config-api-management-dashboard

./: README.md  System_Monitor_Configuration_API_Certificate_Generation_Notes.md  connections.json  plan.md  pyproject.toml  requirements.txt  run_gui.py
docs/: CONFIGURATION_API_GUIDE.md  CONTRIBUTING.md  gRPC_Technical_Overview.md
gui/: connection_manager.py  main.py  topology.py  workers.py
scripts/: generate_protos.py  smoke_test.py
sm_config_api/: __init__.py  client.py  connection.py  enums.py  errors.py
sm_config_api/services/: base.py  logging_svc.py  parameter.py  project.py  system.py  virtual.py
tests/: conftest.py  test_client.py  test_connection.py  test_enums_errors.py  test_live_integration.py
