[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-config-api"
version = "0.1.0"
description = "Python wrapper for the System Monitor Configuration gRPC API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "McLaren Applied"},
]
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=5.26",
    "cryptography>=42.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "grpcio-testing>=1.62",
    "ruff>=0.4",
]
gui = [
    "PySide6>=6.5",
]

[tool.setuptools.packages.find]
include = ["sm_config_api*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
